--- a/authors.html
+++ b/authors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>Derek's Blog</title>
+    <title>Authors - Derek's Blog</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="">
+
         <meta name="author" content="Derek Saw" />
 
     <!-- Open Graph tags -->
@@ -66,14 +66,8 @@ Derek's Blog            </a>
 <div class="container">
     <div class="row">
         <div class="col-sm-9">
-            <article>
-                <h2><a href="/My-first-post.html">My first post</a></h2>
-                <div class="summary"><p>Short version of my first blog post</p>
-                    <a class="btn btn-default btn-xs" href="/My-first-post.html">more ...</a>
-                </div>
-            </article>
-            <hr/>
-
+    <h1>Authors on Derek's Blog</h1>
+        <li><a href="/author/derek-saw.html">Derek Saw</a> (1)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
