--- a/authors.html
+++ b/authors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>Authors - Derek's Blog</title>
+    <title>Authors - Rambo Coder</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -13,11 +13,11 @@
         <meta name="author" content="Derek Saw" />
 
     <!-- Open Graph tags -->
-        <meta property="og:site_name" content="Derek's Blog" />
+        <meta property="og:site_name" content="Rambo Coder" />
         <meta property="og:type" content="website"/>
-        <meta property="og:title" content="Derek's Blog"/>
+        <meta property="og:title" content="Rambo Coder"/>
         <meta property="og:url" content=""/>
-        <meta property="og:description" content="Derek's Blog"/>
+        <meta property="og:description" content="Rambo Coder"/>
 
 
     <!-- Bootstrap -->
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
 
         <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
-              title="Derek's Blog ATOM Feed"/>
+              title="Rambo Coder ATOM Feed"/>
 
 
 
@@ -36,7 +36,7 @@
 </head>
 <body>
 
-<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	<div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -46,10 +46,13 @@
                 <span class="icon-bar"></span>
             </button>
             <a href="/" class="navbar-brand">
-Derek's Blog            </a>
+Rambo Coder            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                         <li><a href="/pages/about.html">
+                             About
+                          </a></li>
                         <li >
                             <a href="/category/misc.html">Misc</a>
                         </li>
@@ -66,7 +69,7 @@ Derek's Blog            </a>
 <div class="container">
     <div class="row">
         <div class="col-sm-9">
-    <h1>Authors on Derek's Blog</h1>
+    <h1>Authors on Rambo Coder</h1>
         <li><a href="/author/derek-saw.html">Derek Saw</a> (1)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
@@ -76,12 +79,30 @@ Derek's Blog            </a>
     <ul class="list-group list-group-flush">
             <li class="list-group-item"><h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
               <ul class="list-group" id="social">
-                <li class="list-group-item"><a href="#"><i class="fa fa-you-can-add-links-in-your-config-file-square fa-lg"></i> You can add links in your config file</a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-another-social-link-square fa-lg"></i> Another social link</a></li>
+                <li class="list-group-item"><a href="https://github.com/dstl1128"><i class="fa fa-github-square fa-lg"></i> github</a></li>
+                <li class="list-group-item"><a href="https://bitbucket.org/dereks"><i class="fa fa-bitbucket-square fa-lg"></i> bitbucket</a></li>
               </ul>
             </li>
 
+            <li class="list-group-item"><h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Recent Posts</span></h4>
+                <ul class="list-group" id="recentposts">
+                    <li class="list-group-item">
+                        <a href="/2015/My-first-post.html">
+                            My first post
+                        </a>
+                    </li>
+                </ul>
+            </li>
 
+            <li class="list-group-item"><a href="/"><h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Categories</span></h4></a>
+                <ul class="list-group" id="categories">
+                    <li class="list-group-item">
+                        <a href="/category/misc.html">
+                            <i class="fa fa-folder-open fa-lg"></i> misc
+                        </a>
+                    </li>
+                </ul>
+            </li>
 
 
 
